--- a/banner section/index.html
+++ b/banner section/index.html
@@ -68,6 +68,13 @@
         <p class="project-paragraph">It is a place where you get information of about all historical,famous places across the India.</p>
         </div>
     </div>
+    <div class="col-lg-12">
+        <div class="project-card-container">
+        <a href="https://tourismwebsite5.ccbp.tech/" target="_blank"><i class="fas fa-globe"></i></a>
+        <h1 class="project-heading">Tourism Project</h1>
+        <p class="project-paragraph">It is a place where you get information of about all historical,famous places across the India.</p>
+        </div>
+    </div>
 
     </div>
     <div class="contact-container">
